--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --mode dev",
     "build": "vite build",
     "lint": "eslint uru-frameworks-secure-notes-app",
-    "preview": "vite preview"
+    "preview": "vite --mode preview",
+    "debug": "vite --mode debug",
+    "prod": "vite build && vite preview --mode prod"
   },
   "dependencies": {
+    "@ralvarezdev/js-logger": "^0.1.13",
+    "@ralvarezdev/js-mode": "^0.1.4",
+    "dotenv": "^16.4.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
