--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ralvarezdev/js-deep-freeze": "^0.1.1",
     "@ralvarezdev/js-logger": "^0.1.13",
     "@ralvarezdev/js-mode": "^0.1.9",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
