--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ralvarezdev/js-logger": "^0.1.13",
     "@ralvarezdev/js-mode": "^0.1.9",
     "bcryptjs": "^3.0.2",
+    "buffer": "^6.0.3",
     "dotenv": "^16.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
